Flex fix for non IE11

--- a/source/_patterns/02-organisms/promotions-block/_promotions-block.scss
+++ b/source/_patterns/02-organisms/promotions-block/_promotions-block.scss
@@ -8,7 +8,7 @@
 
     @include breakpoint-up($bp--medium) {
       .qh__teaser-promotion {
-        flex: 1 0 calc(50% - 1rem);
+        flex: 0 1 calc(50% - 1rem);
         margin-left: 0;
         margin-top: 1.5rem;
 
@@ -25,7 +25,7 @@
 
     @include breakpoint-up($bp--large) {
       .qh__teaser-promotion {
-        flex: 1 0 calc(33% - 1rem);
+        flex: 0 1 calc(33% - 0.5rem);
 
         @include onlyIE() {
           flex: 0 1 31%;
